Added a new ADO_Data_Service class in order to  connect to the DB.

--- a/AirHockeyMobileService/AirHockeyMobileService.csproj
+++ b/AirHockeyMobileService/AirHockeyMobileService.csproj
@@ -220,6 +220,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADO_Data_Service.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
