Modified and actually created the main menu. a splash screen was added.

--- a/HockeyApp/HockeyApp.csproj
+++ b/HockeyApp/HockeyApp.csproj
@@ -114,6 +114,13 @@
     <None Include="HockeyApp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\MainLogo.png" />
+    <Content Include="Assets\Splash600x300.png" />
+    <Content Include="Assets\Splash620x300.png" />
+    <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-125.png" />
+    <Content Include="Assets\SplashScreen.scale-150.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
