--- a/HockeyApp/HockeyApp.csproj
+++ b/HockeyApp/HockeyApp.csproj
@@ -95,9 +95,11 @@
     <Content Include="Assets\orange juice 2.0.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\pouseButton.png" />
     <Content Include="Assets\QuirkyRobot.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\digital-7.ttf" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -126,6 +128,7 @@
     <Content Include="Assets\MainLogo.png" />
     <Content Include="Assets\PlayButton.png" />
     <Content Include="Assets\ScoreboardButton.png" />
+    <Content Include="Assets\ScoreTable.PNG" />
     <Content Include="Assets\Splash600x300.png" />
     <Content Include="Assets\Splash620x300.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
