Added a Volume Control (User Control) to main page and start game page. added a mute funtinon (see Utils.cs)

--- a/HockeyApp/HockeyApp.csproj
+++ b/HockeyApp/HockeyApp.csproj
@@ -124,6 +124,9 @@
     </Compile>
     <Compile Include="Utils.cs" />
     <Compile Include="ViewModel\ScoreboardViewModel.cs" />
+    <Compile Include="VolumeControl.xaml.cs">
+      <DependentUpon>VolumeControl.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -174,6 +177,10 @@
     <Page Include="StartGamePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="VolumeControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
