Settings button was added, but not shown

--- a/HockeyApp/HockeyApp.csproj
+++ b/HockeyApp/HockeyApp.csproj
@@ -146,6 +146,7 @@
     <Content Include="Assets\PlayButton.png" />
     <Content Include="Assets\ScoreboardButton.png" />
     <Content Include="Assets\ScoreTable.PNG" />
+    <Content Include="Assets\settings_icon.png" />
     <Content Include="Assets\Sounds\Wigle_8bit.mp3" />
     <Content Include="Assets\sound_off_icon.png" />
     <Content Include="Assets\sound_on_icon.png" />
