Changed the colors on the Scoreboard page, and fixed the scoreboard navigation back to the main menu instead of to the game by adding a specific rule in the App.xaml.cs file, in the OnNavigationBack event.

--- a/AirHockeyMobileService/AirHockeyMobileService.csproj
+++ b/AirHockeyMobileService/AirHockeyMobileService.csproj
@@ -275,6 +275,7 @@
     <Content Include="packages.config" />
     <Content Include="Performance\Microsoft.ServiceBus.MessagingPerformanceCounters.man" />
     <None Include="Properties\PublishProfiles\AirHockeyMobileService - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\mobile-HockeyService %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\mobile-HockeyService.pubxml" />
   </ItemGroup>
   <PropertyGroup>
